style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

* {
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

p {
    padding-top: 350px;
    font-size: 20px;
}

a {
    display: flex; 
    align-items: center;
    justify-content: center;
}

.title {
    background: url('assets/title.png') no-repeat;
    background-position: center;
    position: absolute;
    height: 100%;
    width: 100%;
    animation: UpDown 3.5s linear infinite;
}

@keyframes UpDown {
  0%, 100% {
    bottom: 0;
  }
  50% {
    bottom: 25px;
  }
}

.titlegame {
    display: flex; 
    align-items: center;
    justify-content: center;
    width: 200px;
    height: 100px;
 
}

.titlegame img {
    width: 70%;
    height: auto;
 
}

.titlebg {
    background-color: white;
    display: flex; 
    align-items: center;
    justify-content: center;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 15px;
    width: 70%;
    height: auto;
}

.bg {
    background: url('assets/redwaves.png') center;
    height: 120%;
    width: 400%;
    position: absolute;
    z-index: -1;
    background-repeat: repeat-x;
    animation: bg 20s linear infinite;
    filter: blur(15px)
}


@keyframes bg {
    100% {
        transform: translateX(-1000px);
    }
}

.back {
    background-color: rgb(241, 168, 178);
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

.game {
    background-color: white;
    display: flex; 
    padding-top: 0px;
    padding-bottom: 15px;
    border-radius: 15px;
    width: 600px;
    height: 550px;
}

.info {
    background-position: left top;
    margin-top: 20px;
    margin-left: 20px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.info img{
    width: 5%;
    height: auto;
}

.infoa {
    background-position: left top;
    margin-top: 27px;
    margin-left: 90px;
    position: absolute;
    height: 100%;
    width: 100%;
    animation: LeftRight 1s linear infinite;
}
@keyframes LeftRight {
    0%, 100% {
      left: 425px;
    }
    50% {
      left: 430px;
    }
  }
.infoa img{
    width: 2.5%;
    height: auto;
}


.tea {
    background-position: left top;
    margin-top: 5px;
    margin-left: -550px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.tea img{
    width: 4%;
    height: auto;
}

.water {
    background-position: left top;
    margin-top: 15px;
    margin-left: -475px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.water img{
    width: 3%;
    height: auto;
}

.food {
    background-position: left top;
    margin-top: 20px;
    margin-left: -405px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.food img{
    width: 3%;
    height: auto;
}

.choc {
    background-position: left top;
    margin-top: 25px;
    margin-left: -325px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.choc img{
    width: 4%;
    height: auto;
}

.exercise {
    background-position: left top;
    margin-top: 30px;
    margin-left: -240px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.exercise img{
    width: 4%;
    height: auto;
}

.sleep {
    background-position: left top;
    margin-top: 20px;
    margin-left: -170px;
    position: absolute;
    height: 100%;
    width: 100%;
}
.sleep img{
    width: 3%;
    height: auto;
}

